hphp/test/slow/namespace/alias/xhp_style_namespace1.php.expectf
Fatal error: Cannot use namespace with xhp-style names (contains `:` or `-`) in %s/namespace/alias/xhp_style_namespace1.php on line 6
